Fixed Expertise Tile Alignment

--- a/src/components/ExpertiseTile/style.css
+++ b/src/components/ExpertiseTile/style.css
@@ -21,14 +21,14 @@
     text-align: center;
     font-family: 'Quicksand';
     margin: 1rem 0;
-    flex: 1;
+    flex: 5;
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
 .expertiseDesc {
-    flex: 9;
+    flex: 5;
     text-align: center;
     display: flex;
     align-items: center;
